crates/test-ui/ui/msg_send_id_invalid_receiver.stderr
error[E0308]: mismatched types
 --> ui/msg_send_id_invalid_receiver.rs
  |
  |     let _: Allocated<Object> = unsafe { msg_send_id![obj, alloc] };
  |                                         -------------^^^--------
  |                                         |            |
  |                                         |            expected `&Class`, found `&Object`
  |                                         arguments to this function are incorrect
  |
  = note: expected reference `&objc2::runtime::Class`
             found reference `&objc2::runtime::Object`
note: associated function defined here
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/mod.rs
  |
  |     unsafe fn send_message_id<A: MessageArguments, R: MaybeUnwrap<Input = U>>(
  |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
 --> ui/msg_send_id_invalid_receiver.rs
  |
  |     let _: Id<Object> = unsafe { msg_send_id![obj, init] };
  |                                  -------------^^^-------
  |                                  |            |
  |                                  |            expected `Option<Allocated<_>>`, found `&Object`
  |                                  arguments to this function are incorrect
  |
  = note:   expected enum `Option<Allocated<_>>`
          found reference `&objc2::runtime::Object`
note: associated function defined here
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/mod.rs
  |
  |     unsafe fn send_message_id<A: MessageArguments, R: MaybeUnwrap<Input = U>>(
  |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
 --> ui/msg_send_id_invalid_receiver.rs
  |
  |     let _: Id<Object> = unsafe { msg_send_id![cls, init] };
  |                                  -------------^^^-------
  |                                  |            |
  |                                  |            expected `Option<Allocated<_>>`, found `&Class`
  |                                  arguments to this function are incorrect
  |
  = note:   expected enum `Option<Allocated<_>>`
          found reference `&objc2::runtime::Class`
note: associated function defined here
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/mod.rs
  |
  |     unsafe fn send_message_id<A: MessageArguments, R: MaybeUnwrap<Input = U>>(
  |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
 --> ui/msg_send_id_invalid_receiver.rs
  |
  |     let _: Id<Object> = unsafe { msg_send_id![obj, init] };
  |                                  -------------^^^-------
  |                                  |            |
  |                                  |            expected `Option<Allocated<_>>`, found `Id<Object>`
  |                                  arguments to this function are incorrect
  |
  = note: expected enum `Option<Allocated<_>>`
           found struct `Id<objc2::runtime::Object>`
note: associated function defined here
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/mod.rs
  |
  |     unsafe fn send_message_id<A: MessageArguments, R: MaybeUnwrap<Input = U>>(
  |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
 --> ui/msg_send_id_invalid_receiver.rs
  |
  |     let _: Id<Object> = unsafe { msg_send_id![obj, init] };
  |                                  -------------^^^-------
  |                                  |            |
  |                                  |            expected `Option<Allocated<_>>`, found `Option<Id<Object>>`
  |                                  arguments to this function are incorrect
  |
  = note: expected enum `Option<Allocated<_>>`
             found enum `Option<Id<objc2::runtime::Object>>`
note: associated function defined here
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/mod.rs
  |
  |     unsafe fn send_message_id<A: MessageArguments, R: MaybeUnwrap<Input = U>>(
  |               ^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Id<objc2::runtime::Object>: MessageReceiver` is not satisfied
 --> ui/msg_send_id_invalid_receiver.rs
  |
  |     let _: Id<Object> = unsafe { msg_send_id![obj, new] };
  |                                  -------------^^^------
  |                                  |            |
  |                                  |            the trait `MessageReceiver` is not implemented for `Id<objc2::runtime::Object>`
  |                                  required by a bound introduced by this call
  |
  = help: the following other types implement trait `MessageReceiver`:
            &'a Id<T, O>
            &'a mut Id<T, objc2::rc::Owned>
  = note: required for `RetainSemantics<1>` to implement `MsgSendId<Id<objc2::runtime::Object>, Id<_, _>>`

error[E0277]: the trait bound `Id<objc2::runtime::Object>: MessageReceiver` is not satisfied
 --> ui/msg_send_id_invalid_receiver.rs
  |
  |     let _: Id<Object> = unsafe { msg_send_id![obj, copy] };
  |                                  -------------^^^-------
  |                                  |            |
  |                                  |            the trait `MessageReceiver` is not implemented for `Id<objc2::runtime::Object>`
  |                                  required by a bound introduced by this call
  |
  = help: the following other types implement trait `MessageReceiver`:
            &'a Id<T, O>
            &'a mut Id<T, objc2::rc::Owned>
  = note: required for `RetainSemantics<4>` to implement `MsgSendId<Id<objc2::runtime::Object>, Id<_, _>>`
